# gcloud_logs_anomaly_detection

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  config.py  env.toml  gcloud_event_create.py  gcloud_logs_detect.py  gcloud_logs_llmsummary.py  llmtest.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml  lint-docker.yml  lint-markdown.yml  lint-python.yml
docs/: gcloud_event_create.md  gcloud_logs_detect.md  gcloud_logs_llmsummary.md  llmtest.md
tests/: test_detect.py  test_event_create.py  test_llmsummary.py  test_llmtest.py
